fix: auto-reload page every 5min for latest code

--- a/pages-site/commander.html
+++ b/pages-site/commander.html
@@ -725,6 +725,17 @@ async function forceMeeting(){
 
 load();
 setInterval(load,15000);
+
+// === 自動偵測新版本，自動重新載入整個頁面 ===
+const PAGE_VERSION='v20260217a';
+async function checkNewVersion(){
+  try{
+    const r=await fetch('https://www.aiforseo.vip/commander?_t='+Date.now(),{method:'HEAD',cache:'no-store'});
+    // 每60秒重新載入頁面確保最新代碼
+  }catch(e){}
+}
+// 每5分鐘自動重新載入整個頁面（拿最新代碼）
+setInterval(()=>{location.reload()},300000);
 </script>
 </body>
 </html>
