fix: add commander header - 指揮官許竣翔 prominent display

--- a/pages-site/commander.html
+++ b/pages-site/commander.html
@@ -198,6 +198,17 @@ body{background:#000;color:var(--white);font-family:'JetBrains Mono','Noto Sans 
   </div>
 </div>
 
+<!-- COMMANDER HEADER -->
+<div style="display:flex;align-items:center;justify-content:center;gap:24px;padding:14px 20px;background:linear-gradient(180deg,rgba(0,255,136,0.04),transparent);border-bottom:1px solid rgba(0,255,136,0.1);position:relative">
+  <div style="position:absolute;left:0;right:0;bottom:0;height:1px;background:linear-gradient(90deg,transparent,rgba(255,170,0,0.3),transparent)"></div>
+  <div style="text-align:center">
+    <div style="font-family:Orbitron;font-size:22px;font-weight:900;letter-spacing:6px;color:var(--gold);text-shadow:0 0 30px rgba(255,170,0,0.4);animation:cmdGlow 3s ease-in-out infinite">指揮官：許竣翔</div>
+    <div style="font-size:11px;color:rgba(255,255,255,0.4);margin-top:4px;letter-spacing:2px">CEO, 小路光有限公司 · 統編 60475510 · SEOBAIKE AI Platform</div>
+    <div style="margin-top:6px;display:inline-block;padding:3px 14px;border:1px solid rgba(255,170,0,0.3);border-radius:20px;font-size:10px;color:var(--gold);letter-spacing:2px;animation:patentFlash 3s ease-in-out infinite">Patent 115100981 — 世界定義約束法用於AI推理 — CaaS</div>
+  </div>
+</div>
+<style>@keyframes cmdGlow{0%,100%{text-shadow:0 0 20px rgba(255,170,0,0.3)}50%{text-shadow:0 0 40px rgba(255,170,0,0.6),0 0 80px rgba(255,170,0,0.2)}}</style>
+
 <!-- STATUS STRIP -->
 <div class="status-strip">
   <div class="patent-badge">PATENT 115100981</div>
