fix: grid layout for commander header

--- a/pages-site/commander.html
+++ b/pages-site/commander.html
@@ -34,7 +34,7 @@ body{background:#000;color:var(--white);font-family:'JetBrains Mono','Noto Sans 
 @keyframes scan{0%{top:-2px}100%{top:100vh}}
 
 /* === LAYOUT === */
-.app{position:relative;z-index:10;height:100vh;display:grid;grid-template-rows:auto auto 1fr auto;overflow:hidden}
+.app{position:relative;z-index:10;height:100vh;display:grid;grid-template-rows:auto auto auto 1fr auto;overflow:hidden}
 
 /* === TOP BAR === */
 .topbar{display:flex;align-items:center;justify-content:space-between;padding:8px 20px;background:rgba(0,0,0,0.9);border-bottom:1px solid rgba(0,255,136,0.15)}
