--- a/pages-site/index.html
+++ b/pages-site/index.html
@@ -145,6 +145,9 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root"></div>
+    <!-- SEOBAIKE AI Widget -->
+    <script src="/seobaike-widget.js" defer></script>
+
   </body>
 </html>
