--- a/pages-site/index.html
+++ b/pages-site/index.html
@@ -145,7 +145,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root"><style>#sb-shell{position:fixed;inset:0;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);display:flex;flex-direction:column;align-items:center;justify-content:center;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;color:#fff;z-index:9999}.sb-logo{font-size:2.5rem;font-weight:900;letter-spacing:-1px;margin-bottom:.5rem}.sb-sub{font-size:1rem;opacity:.8;margin-bottom:2rem}.sb-dots{display:flex;gap:8px}.sb-dot{width:10px;height:10px;border-radius:50%;background:#fff;opacity:.4;animation:sb-pulse 1.4s ease-in-out infinite}.sb-dot:nth-child(2){animation-delay:.2s}.sb-dot:nth-child(3){animation-delay:.4s}@keyframes sb-pulse{0%,80%,100%{opacity:.4;transform:scale(.8)}40%{opacity:1;transform:scale(1)}}</style><div id="sb-shell"><div class="sb-logo">SEOBAIKE</div><div class="sb-sub">AI 驅動的 SEO 自動化平台</div><div class="sb-dots"><div class="sb-dot"></div><div class="sb-dot"></div><div class="sb-dot"></div></div></div></div>
     <!-- SEOBAIKE AI Widget -->
     <script src="/seobaike-widget.js" defer></script>
 
