feat: add xiaobai widget to homepage [skip ci]

--- a/pages-site/index.html
+++ b/pages-site/index.html
@@ -1058,5 +1058,6 @@ function tick() {
 }
 tick(); setInterval(tick, 1000)
 </script>
+<script src="https://aiforseo.vip/widget.js" defer></script>
 </body>
 </html>
